--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             color: rgb(239, 239, 239);
             font-weight:600;
             cursor: pointer;
+	    font-size: 35px;
         }
         button:hover{
             width: 45vw;
