--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             color: rgb(239, 239, 239);
             font-weight:600;
             cursor: pointer;
-	    font-size: 50%;
+	    font-size: 50vh;
         }
         button:hover{
             width: 45vw;
